[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
fnv = "1.0.7"
itertools = "0.10.5"
lazy_static = "1.4.0"
recap = "0.1.2"
regex = "1.7.0"
serde = "1.0.150"
